Development release ChangeLog
-----------------------------

21-03-2010 Adrian Dimitrov 		<dimitrov.adrian@gmail.com>
	* src/treebrowser.c
		fixed few compile warnings with glib and unused vars
		fixed expanding, now directory is open when it click filling for first time
		fixed possible segfault on start
		added menu option to go up
		fixed duplicated vbox varname now is 'sidebar_vbox'
		added configuration dialog
		fixed externally open menu
		added option to close bars in bars
		added options to expand/collapse all from menu
		fixed compile error with glib < 2.12.0
		added option to go current doc path in menu


20-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		clear comments
		changelog update
		if filter start with '!;' then filters are temporary reversed
			ex.: '!;*.c;*.h' will show all expect .c and .h files

19-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		clear up the syntax and function names
		fixed many bugs with renaming/creating/deleting objects
		added multiple filtering criterias (separated by ';')
		added oneclick document opening


18-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		add option to reverse filematch filter


17-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		migrated to dialogs_show_msgbox and dialogs_show_question
		fix problem with path initialization


16-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fix compilation warning messages
		fix some crytical errors


21-02-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fix patch applyed from Enrico about initial directories


20-02-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		made strings suitable for localization
		fixed problem with default chroot
		added option to disable chrooting on double click on directory


17-02-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>
